// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/babel-plugin-jsx-pragmatic existing-imports 1`] = `
"// inserted import has to go AFTER polyfills
import 'react-app-polyfill/ie11'
import 'react-app-polyfill/stable'

import React from 'react'
import ReactDOM from 'react-dom'
import App from './App'

ReactDOM.render(<App />, document.getElementById('root'))


      ↓ ↓ ↓ ↓ ↓ ↓

// inserted import has to go AFTER polyfills
import 'react-app-polyfill/ie11';
import 'react-app-polyfill/stable';
import React from 'react';
import ReactDOM from 'react-dom';
import App from './App';
import { jsx as ___EmotionJSX } from \\"@emotion/core\\";
ReactDOM.render(<App />, document.getElementById('root'));"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic fragment-only 1`] = `
"import * as React from 'react'

const F = () => <></>


      ↓ ↓ ↓ ↓ ↓ ↓

import * as React from 'react';
import { jsx as ___EmotionJSX } from \\"@emotion/core\\";

const F = () => <></>;"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic fragment-only-no-import 1`] = `
"// When using Emotion, React does not need to be in scope except
// when using fragment shorthand. This plugin should add a react
// import when using the \`fragment\` option, so we can ignore the
// linting error here.
// eslint-disable-next-line react/react-in-jsx-scope
const F = () => <></>


      ↓ ↓ ↓ ↓ ↓ ↓

import { jsx as ___EmotionJSX } from \\"@emotion/core\\";
import { default as React } from \\"react\\";

// When using Emotion, React does not need to be in scope except
// when using fragment shorthand. This plugin should add a react
// import when using the \`fragment\` option, so we can ignore the
// linting error here.
// eslint-disable-next-line react/react-in-jsx-scope
const F = () => <></>;"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic minimal 1`] = `
"import * as React from 'react'

const P = () => <p />


      ↓ ↓ ↓ ↓ ↓ ↓

import * as React from 'react';
import { jsx as ___EmotionJSX } from \\"@emotion/core\\";

const P = () => <p />;"
`;
